k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: devops-assignment
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-assignment
      tier: backend
  template:
    metadata:
      labels:
        app: devops-assignment
        tier: backend
    spec:
      containers:
        - name: backend
          image: devops-assignment-backend:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20
