k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: devops-assignment
    tier: backend
spec:
  selector:
    app: devops-assignment
    tier: backend
  ports:
    - port: 5000
      targetPort: 5000
