k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: devops-assignment
    tier: db
spec:
  selector:
    app: devops-assignment
    tier: db
  ports:
    - port: 5432
      targetPort: 5432
