k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: devops-assignment
    tier: frontend
spec:
  selector:
    app: devops-assignment
    tier: frontend
  ports:
    - port: 80
      targetPort: 80
